--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,11 @@ android {
     dataBinding {
         enabled = true
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -35,5 +39,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.airbnb.android:lottie:3.2.0'
+    implementation "com.twilio.sdk:twilio:7.45.1"
+    implementation "com.squareup.okhttp3:okhttp:4.2.1"
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
+    implementation 'com.github.AnyChart:AnyChart-Android:0.0.3'
+
 
 }
