--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
 
 
 dependencies {
+    implementation project(":alarm")
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -44,6 +47,12 @@ dependencies {
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'com.sdsmdg.harjot:vectormaster:1.1.3'
     implementation 'com.github.AnyChart:AnyChart-Android:0.0.3'
+    implementation "com.google.android.libraries.places:places:1.1.0"
+    implementation "com.google.android.gms:play-services-location:17.0.0"
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    // this is needed to use the updated AppCompatActivity
+    implementation 'androidx.activity:activity:1.0.0-rc01' // or remove -ktx if not using kotlin
+    implementation 'androidx.fragment:fragment:1.1.0-rc04' // or remove -ktx if not using kotlin
 
 
 }
